<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--now add some icons-->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_action_home"
            />
        <item
            android:id="@+id/report"
            android:title="@string/report"
            android:icon="@drawable/ic_action_work"
            />
        <item
            android:id="@+id/view"
            android:title="@string/View"
            android:icon="@drawable/ic_action_shool"
            />
        <item
            android:id="@+id/control"
            android:title="@string/control"
            android:icon="@drawable/ic_action_timeline"
            />
        <item
            android:id="@+id/manage"
            android:title="@string/manage"
            android:icon="@drawable/ic_action_timeline"
            />

    </group>

    <item android:title="Controls">

        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_action_setting"
                />
            <item
                android:id="@+id/logout"
                android:title="Logout"
                android:icon="@drawable/ic_action_logout"
                />
        </menu>

    </item>

</menu>