<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ControlFragment">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="147dp"
        android:text="@string/movement" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:gravity="center"
        android:text="@string/control"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="248dp"
        android:layout_marginStart="34dp"
        android:text="@string/speed" />

    <Button
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/forward"
        android:layout_marginEnd="60dp"
        android:text="@string/backward" />

    <Button
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"

        android:layout_alignEnd="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="207dp"
        android:text="@string/forward" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="168dp"
        android:layout_marginStart="86dp" />

</RelativeLayout>