<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ManageFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/inputdistance"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/distance_in_meter"
        android:inputType="textPersonName|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="41dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/input_distance"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/inputdistance"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="160dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/order"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputdistance"
        app:layout_constraintVertical_bias="1.0" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/order"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="132dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="132dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/rows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="8dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>